# exile-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  opencode.json  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  util.rs
src-tauri/src/pob/: commands.rs  error.rs  google_drive.rs  manager.rs  mod.rs  parallel_download.rs  progress.rs  version.rs
src-tauri/src/pob/gdrive/: mod.rs  proxy.rs
src/lib/: bindings.ts
src/lib/components/: app-header.svelte  app-sidebar.svelte  mode-toggle.svelte  update-dialog.svelte
src/lib/stores/: settings.svelte.ts  updater.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/guide/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/timer/: +page.svelte
