[package]
name = "exile-rs"
version = "0.1.0"
description = "A Tauri App"
authors = ["zmtq05"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "exile_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
log = "0.4.29"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"

tokio = { version = "1.49.0", features = ["fs", "io-util"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
futures-util = "0.3.31"
zip = "7.0.0"
regex = "1.12.2"
chrono = { version = "0.4.42", default-features = false, features = [
    "std",
    "clock",
] }
