[package]
name = "exile-rs"
version = "0.1.0"
description = "A desktop application for managing Path of Exile tools and utilities"
authors = ["zmtq05"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "exile_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-tracing = { version = "0.3", features = ["colored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

specta = { version = "=2.0.0-rc.22" }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"

tracing = "0.1.44"

reqwest = { version = "0.13.1", features = ["stream"] }
tokio = { version = "1.49.0", features = ["fs", "io-util"] }
tokio-util = "0.7.18"
futures-util = "0.3.31"
zip = "7.1.0"
regex = "1.12.2"
html-escape = "0.2.13"
thiserror = "2.0.18"
chrono = "0.4.43"
pin-project-lite = "0.2.16"
scraper = "0.25.0"
scopeguard = "1.2"
sysinfo = "0.38.0"

[dev-dependencies]
tempfile = "3.15"

